--- a/Housing/Readme
+++ b/Housing/Readme
@@ -1,1 +1,7 @@
+The  goal is to determine whether sale prices are influenced more by property size or location.
 
+Some of the things that i learn in this project are:
+    How to organize information using basic Python data structures.
+    How to import data from CSV files and clean it using the pandas library.
+    How to create data visualizations like scatter and box plots.
+    How to examine the relationship between two variables using correlation.
