--- a/1. Skeletal-variation/Readme
+++ b/1. Skeletal-variation/Readme
@@ -2,6 +2,6 @@ SKELETAL VARIATION -
 The comparison of skeletons across species lead to historical insights in evolutionary biology. In this project, you will explore the bones of the human body and make comparisons to a wide variety of mammals and birds.
 
 
-All the Files and the code file (.ipynb format) will be available for your reference.
+All the Files and the code file (both '.py' and '.ipynb' format) will be available for your reference.
 Best,
 Sandeep Patro
