--- a/Housing/Readme
+++ b/Housing/Readme
@@ -5,3 +5,5 @@ Some of the things that i learn in this project are:
     How to import data from CSV files and clean it using the pandas library.
     How to create data visualizations like scatter and box plots.
     How to examine the relationship between two variables using correlation.
+
+all the updates will be available soon
