--- a/01. skeletal-variation/Readme
+++ b/01. skeletal-variation/Readme
@@ -5,3 +5,5 @@ The comparison of skeletons across species lead to historical insights in evolut
 All the Files and the code file (both '.py' and '.ipynb' format) will be available for your reference.
 Best,
 Sandeep Patro
+
+@Sandeep Patro, MTech ICT, Gandhinagar
