--- a/02. Banking_Dashboard/Readme
+++ b/02. Banking_Dashboard/Readme
@@ -15,5 +15,8 @@ Data Insights:
     -Key features: Age (17-85), Estimated Income (~16k-522k), Bank Deposits, Loans, Risk Weighting (1-5), etc.
     -Categorical distributions: E.g., Majority in "Jade" loyalty class; Europeans are the most common nationality.
 
+Best,
+Sandeep Patro
+
 @Sandeep Patro, MTech ICT, Gandhinagar.
 
