--- a/03. NIRF_Dashboard/Dataset/2020/Readme
+++ b/03. NIRF_Dashboard/Dataset/2020/Readme
@@ -1,1 +1,6 @@
+This contains the data (PDFs) for the year 2020.
+This files are downloaded from the NIRF website, Hence it is adviced to use this dataset for Educational 
+purpose only. Any illegal activity found, then you will be held responsible for it.
+@NIRF Govt. of INDIA.
 
+Sandeep Patro.
