--- a/04. ESPN_Cricket_Dashboard/Readme
+++ b/04. ESPN_Cricket_Dashboard/Readme
@@ -15,3 +15,5 @@ Tools & Technologies:
 
 Purpose
 The dashboard was created as a personal project to analyze historical ODI encounters between India and South Africa, turning raw cricket data into meaningful insights through visualization.
+
+@Sandeep Patro, MTech ICT, Gandhinagar
